# Local-file-organizer-agent

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  SUMMARY.md  USAGE.md  deploy.py  main.py  mcp_agent.config.yaml  pyproject.toml  requirements.txt  test_quick.py
file_organizer/: config.json  server.py
file_organizer/agents/: backup.py  classifier.py  organizer.py  reporter.py  scanner.py
file_organizer/models/: file_metadata.py
